abstracted main loop into run() function, added support for sim time limit

--- a/default.settings
+++ b/default.settings
@@ -6,7 +6,8 @@ xdim=100;
 ydim=100;
 dx=2.2649e7;
 dy=2.2649e7;
-n_iterations=5;
+max_iterations=5;
+max_time=-1.0;
 output_interval=1;
 x_bound_1=periodic;
 x_bound_2=periodic;
