added support for iteration limit and output interval based on simulation time instead of iteration number

--- a/default.settings
+++ b/default.settings
@@ -8,7 +8,8 @@ dx=2.2649e7;
 dy=2.2649e7;
 max_iterations=5;
 max_time=-1.0;
-output_interval=1;
+iter_output_interval=1;
+time_output_interval=-1.0;
 x_bound_1=periodic;
 x_bound_2=periodic;
 y_bound_1=wall;
