all references to job indexing removed

--- a/default.config
+++ b/default.config
@@ -1,10 +1,9 @@
-# Settings file
-# One setting assignment per line
+# Configuration file
+# One config assignment per line
 # Anything after a '#' is considered a comment
-# Integer and double settings must be formatted s.t. std::stoi and std::stod can convert them
-# Boolean settings must be given as "true" or "false"
-# Boundary condition settings must be set as one of {"periodic","wall","open"}
-# See README.md for instructions on job array functionality
+# Integer and double configs must be formatted s.t. std::stoi and std::stod can convert them
+# Boolean configs must be given as "true" or "false"
+# Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Domain dimensions
 xdim = 100
