position grids swapped for DX/DY internally

--- a/default.config
+++ b/default.config
@@ -51,4 +51,4 @@ flux_saturation = true
 # be written out in .out and .state files, respectively.
 # See fileio.cpp for a full list of variable names.
 output_flags = rho, temp, press, rad, energy, v_x, v_y, dt_thermal
-state_flags = rho, mom_x, mom_y, temp, b_x, b_y, b_z
+state_flags = rho, mom_x, mom_y, temp, b_x, b_y, b_z, pos_x, pos_y
