--- a/default.config
+++ b/default.config
@@ -6,10 +6,10 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Domain dimensions
-xdim = 100
-ydim = 100
-dx = 2.2649e7
-dy = 2.2649e7
+# xdim = 100
+# ydim = 100
+# dx = 2.2649e7
+# dy = 2.2649e7
 
 # Iteration settings
 max_iterations = 5
@@ -51,4 +51,4 @@ flux_saturation = true
 # be written out in .out and .state files, respectively.
 # See fileio.cpp for a full list of variable names.
 output_flags = rho, temp, press, rad, energy, v_x, v_y, dt_thermal
-state_flags = rho, mom_x, mom_y, temp, b_x, b_y, b_z, pos_x, pos_y
+# state_flags = rho, mom_x, mom_y, temp, b_x, b_y, b_z, pos_x, pos_y, grav_x, grav_y
