UI fully integrated with solver; control using command line flags

--- a/default.config
+++ b/default.config
@@ -5,16 +5,10 @@
 # Boolean configs must be given as "true" or "false"
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
-# Domain dimensions
-# xdim = 100
-# ydim = 100
-# dx = 2.2649e7
-# dy = 2.2649e7
-
 # Iteration settings
-max_iterations = 5
-max_time = -1.0
-iter_output_interval = 1
+max_iterations = 20
+# max_time = -1.0
+iter_output_interval = 5
 time_output_interval = -1.0
 
 # Boundary conditions
@@ -22,6 +16,10 @@ x_bound_1 = periodic
 x_bound_2 = periodic
 y_bound_1 = wall
 y_bound_2 = open
+
+# Plasma parameters
+adiabatic_index = 1.666667
+ion_mass = 1.6726e-24
 
 # Heuristic parameters
 temp_chromosphere = 3.0e4 
@@ -48,7 +46,6 @@ thermal_conduction = true
 flux_saturation = true
 
 # All of the (comma-separated) variables given here will be given "true" flags and therefore
-# be written out in .out and .state files, respectively.
+# be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
 output_flags = rho, temp, press, rad, energy, v_x, v_y, dt_thermal
-# state_flags = rho, mom_x, mom_y, temp, b_x, b_y, b_z, pos_x, pos_y, grav_x, grav_y
