reorganized default.config; removed b_0 from PlasmaDomain; config now defaults to default.config if none given

--- a/default.config
+++ b/default.config
@@ -6,10 +6,9 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
-max_iterations = 2
-# max_time = -1.0
-iter_output_interval = 5
-time_output_interval = -1.0
+max_iterations = 5
+iter_output_interval = 1
+time_output_interval = -1.0  # negative value means simulation time ignored for output interval
 
 # Boundary conditions
 x_bound_1 = periodic
@@ -17,17 +16,8 @@ x_bound_2 = periodic
 y_bound_1 = wall
 y_bound_2 = open
 
-
-# Heuristic parameters
-temp_chromosphere = 3.0e4 
-radiation_ramp = 1.0e3
-heating_rate = 1.0e-4
-b_0 = 100
-
 # Safety factors
 epsilon = 0.1
-epsilon_thermal = 0.1
-epsilon_rad = 0.1
 epsilon_viscous = 1.0
 
 # Variable lower bounds
@@ -36,13 +26,25 @@ rho_min = 1.0e-30
 temp_min = 1.0e4
 thermal_energy_min = 1.0e-6
 
-# Physics settings
-radiative_losses = true
-ambient_heating = true
-thermal_conduction = true
-flux_saturation = true
-
-# All of the (comma-separated) variables given here will be given "true" flags and therefore
-# be written out in mhd.out files
+# All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
 output_flags = rho, temp, press, rad, energy, v_x, v_y, dt_thermal
+
+#---------- SOLAR SETTINGS ----------#
+
+# Radiative losses
+radiative_losses = true
+radiation_ramp = 1.0e3
+temp_chromosphere = 3.0e4 
+epsilon_rad = 0.1 # safety factor for subcycling time step
+
+# Ambient heating
+ambient_heating = true
+heating_rate = 1.0e-4
+
+# Thermal conduction (Spitzer conductivity)
+thermal_conduction = true
+flux_saturation = true
+epsilon_thermal = 0.1 # safety factor for subcycling time step
+
+#------------------------------------#
