added command line flag for settings file

--- a/default.config
+++ b/default.config
@@ -30,7 +30,7 @@ thermal_energy_min = 1.0e-6
 # See fileio.cpp for a full list of variable names.
 output_flags = rho, temp, press, rad, energy, v_x, v_y, dt_thermal
 
-#---------- SOLAR SETTINGS ----------#
+#---------- SOLAR CONFIGS ----------#
 
 # Radiative losses
 radiative_losses = true
