--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,10 @@
         "list": "cpp",
         "set": "cpp",
         "typeindex": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "ranges": "cpp"
     }
 }
