--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,8 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: g++-8 build active file",
-            "command": "/usr/bin/g++-8",
+            "label": "C/C++: g++-10 build active file",
+            "command": "/usr/bin/g++-10",
             "args": [
                 "-I", 
                 "${workspaceFolder}/source/",
@@ -11,14 +11,17 @@
                 "${workspaceFolder}/source/mhd/",
                 "-I",
                 "${workspaceFolder}/source/user-interface/",
+                "-I",
+                "${workspaceFolder}/source/solar/",
 
-                "-std=c++17",
+                "-std=c++20",
                 "-fopenmp",
                 "-g",
 
                 "${file}",
                 "${workspaceFolder}/source/mhd/*",
                 "${workspaceFolder}/source/user-interface/*",
+                "${workspaceFolder}/source/solar/*",
                 
                 "-o",
                 "${workspaceFolder}/run",
