re-expressed energy equation in terms of separate thermal, kinetic, magnetic energies; fixed printing of small numbers in progress update

--- a/default.config
+++ b/default.config
@@ -6,7 +6,7 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
-max_iterations = 5
+max_iterations = 10
 iter_output_interval = 1
 time_output_interval = -1.0  # negative value means simulation time ignored for output interval
 
@@ -27,7 +27,7 @@ thermal_energy_min = 1.0e-6
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, press, rad, energy, v_x, v_y, dt_thermal
+output_flags = rho, temp, press, rad, thermal_energy, v_x, v_y, dt_thermal
 
 #---------- SOLAR CONFIGS ----------#
 
