--- a/ucnp.config
+++ b/ucnp.config
@@ -6,7 +6,7 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
-max_iterations = -1
+max_iterations = 10
 iter_output_interval = 1
 time_output_interval = -1.0  # negative value means simulation time ignored for output interval
 
@@ -22,13 +22,13 @@ epsilon_viscous = 1.0
 
 # Variable lower bounds
 dt_thermal_min = 1.0e-4
-rho_min = 1.0e-60
-temp_min = 1.0e-4
+rho_min = 1.0e-21
+temp_min = 1.0e-5
 thermal_energy_min = 1.0e-100
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, press, rad, thermal_energy, v_x, v_y, dt_thermal
+output_flags = rho, temp, press, thermal_energy, v_x, v_y, dt_thermal
 
 #---------- SOLAR CONFIGS ----------#
 
