--- a/default.config
+++ b/default.config
@@ -15,6 +15,7 @@ x_bound_1 = periodic
 x_bound_2 = periodic
 y_bound_1 = wall
 y_bound_2 = open
+open_boundary_strength = 1.0
 
 # Safety factors
 epsilon = 0.1
