added configs for whether or not state files are written each time step (safe_state_mode) and the frequency of stdout updates (std_out_interval)

--- a/default.config
+++ b/default.config
@@ -9,6 +9,8 @@
 max_iterations = 10
 iter_output_interval = 1
 time_output_interval = -1.0  # negative value means simulation time ignored for output interval
+std_out_interval = 5    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
+safe_state_mode = false  # when true, writes out a state file at each iteration (very slow); when false, only does so at end of successful run
 
 # Boundary conditions
 x_bound_1 = periodic
