example of origin setting in default.config

--- a/default.config
+++ b/default.config
@@ -18,6 +18,8 @@ x_bound_2 = periodic
 y_bound_1 = wall
 y_bound_2 = open
 open_boundary_strength = 1.0
+x_origin = lower    # lower, center, or upper
+y_origin = lower    # lower, center, or upper
 
 # Safety factors
 epsilon = 0.1
