update UCNP analysis

--- a/ucnp.config
+++ b/ucnp.config
@@ -6,19 +6,22 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
-max_iterations = 10
-iter_output_interval = 1
+max_iterations = -1
+iter_output_interval = 50
 time_output_interval = -1.0  # negative value means simulation time ignored for output interval
+std_out_interval = 50    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
+safe_state_mode = false  # when true, writes out a state file at each iteration (very slow); when false, only does so at end of successful run
 
 # Boundary conditions
 x_bound_1 = open
 x_bound_2 = open
 y_bound_1 = open
 y_bound_2 = open
+open_boundary_strength = 1
 
 # Safety factors
 epsilon = 0.1
-epsilon_viscous = 1.0
+epsilon_viscous = 1e-3
 
 # Variable lower bounds
 dt_thermal_min = 1.0e-4
