number density n added as derived variable, can have its output flag turned on for visualization purposes

--- a/default.config
+++ b/default.config
@@ -32,7 +32,7 @@ thermal_energy_min = 1.0e-6
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, press, rad, thermal_energy, v_x, v_y, dt_thermal
+output_flags = rho, temp, press, rad, thermal_energy, v_x, v_y, dt_thermal, dt, n
 
 #---------- SOLAR CONFIGS ----------#
 
