updated default config to reflect recent additions

--- a/default.config
+++ b/default.config
@@ -3,7 +3,7 @@
 # Anything after a '#' is considered a comment
 # Integer and double configs must be formatted s.t. std::stoi and std::stod can convert them
 # Boolean configs must be given as "true" or "false"
-# Boundary condition configs must be set as one of {"periodic","wall","open"}
+# Boundary condition configs must be set as one of {"periodic","open","fixed","reflect"}
 
 # Iteration settings
 max_iterations = 10
@@ -18,6 +18,7 @@ x_bound_2 = periodic
 y_bound_1 = wall
 y_bound_2 = open
 open_boundary_strength = 1.0
+open_boundary_decay_base = 0.8
 x_origin = lower    # lower, center, or upper
 y_origin = lower    # lower, center, or upper
 
