add quadrupole functions

--- a/ucnp.settings
+++ b/ucnp.settings
@@ -16,14 +16,12 @@ sig_x = cgs = 0.1 % rms radius of plasma along x axis
 sig_y = cgs = 0.1 % rms radius of plasma along y axis
 Ti = cgs = 1e-2 % initial ion temperature
 Te = cgs = 20 % initial electron temperature
-dBdx = cgs = 0 % gradient of quadrupole magnetic field along symmetry (x) axis
-tmax/tau_exp = cgs = 5 % end time for simulation
-x_lim = sig_x = 20 % simulation box size on x axis: from -x_lim to x_lim
-y_lim = sig_y = 20 % simulation box size on y axis: from -y_lim to y_lim   
-grid_opt = opt = uniform
-Nx = cgs = 301 % number of cells on x axis
-Ny = cgs = 301 % number of cells on y axis                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   0 % simulation box size on y axis: from -y_lim to y_lim
-dx = sig_x = .1 % grid spacing
-dy = sig_y = .1 % grid spacing
+dBdx = cgs = 150 % gradient of quadrupole magnetic field along symmetry (x) axis
+tmax/tau_exp = cgs = 10 % end time for simulation
+x_lim = sig_x = 10 % simulation box size on x axis: from -x_lim to x_lim
+y_lim = sig_x = 10 % simulation box size on y axis: from -y_lim to y_lim   
+grid_opt = opt = uniform % uniform or non-uniform
+Nx = cgs = 401 % number of cells on x axis
+Ny = cgs = 401 % number of cells on y axis                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   0 % simulation box size on y axis: from -y_lim to y_lim
 m_i = cgs = 1.455e-22 % Sr ion mass
 gam = cgs = 1.6666667 % adiabatic index for Sr+ 
