--- a/ucnp.config
+++ b/ucnp.config
@@ -7,9 +7,9 @@
 
 # Iteration settings
 max_iterations = -1
-iter_output_interval = 50
+iter_output_interval = 10
 time_output_interval = -1.0  # negative value means simulation time ignored for output interval
-std_out_interval = 50    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
+std_out_interval = 10    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
 safe_state_mode = false  # when true, writes out a state file at each iteration (very slow); when false, only does so at end of successful run
 
 # Boundary conditions
@@ -17,11 +17,12 @@ x_bound_1 = open
 x_bound_2 = open
 y_bound_1 = open
 y_bound_2 = open
-open_boundary_strength = 1
+open_boundary_strength = 1.0
+open_boundary_decay_base = 0.5
 
 # Safety factors
 epsilon = 0.1
-epsilon_viscous = 1e-3
+epsilon_viscous = 1e-10
 
 # Variable lower bounds
 dt_thermal_min = 1.0e-4
