add alfven velocity as variable

--- a/ucnp.config
+++ b/ucnp.config
@@ -6,10 +6,10 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
-max_iterations = -1
-iter_output_interval = 125
+max_iterations = 5
+iter_output_interval = 1
 time_output_interval = -1.0  # negative value means simulation time ignored for output interval
-std_out_interval = 125    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
+std_out_interval = 1    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
 safe_state_mode = false  # when true, writes out a state file at each iteration (very slow); when false, only does so at end of successful run
 
 # Boundary conditions
@@ -26,13 +26,13 @@ epsilon_viscous = 0
 
 # Variable lower bounds
 dt_thermal_min = 1.0e-4
-rho_min = 1.0e-21
+rho_min = 1.4550e-19
 temp_min = 1.0e-5
 thermal_energy_min = 1.0e-100
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, press, thermal_energy, v_x, v_y, dt_thermal
+output_flags = rho, temp, press, thermal_energy, v_x, v_y, dt_thermal, v_a
 
 #---------- SOLAR CONFIGS ----------#
 
