--- a/solar.settings
+++ b/solar.settings
@@ -14,6 +14,8 @@ xdim = cgs = 100
 ydim = cgs = 100
 duration = cgs = 2000
 init_temp = cgs = 3.0e4
+growth_factor = cgs = 1.1
+uniform_fraction = cgs = 0.75
 b_0 = cgs = 100
 n_base = cgs = 1.0e12
 ion_mass = cgs = 1.6726e-24
