--- a/default.config
+++ b/default.config
@@ -3,54 +3,75 @@
 # Anything after a '#' is considered a comment
 # Integer and double configs must be formatted s.t. std::stoi and std::stod can convert them
 # Boolean configs must be given as "true" or "false"
-# Boundary condition configs must be set as one of {"periodic","open","fixed","reflect"}
+# Boundary condition configs must be set as one of {"periodic", "open", "fixed", "reflect"}
 
 # Iteration settings
-max_iterations = 10
+time_integrator = rk2
+max_iterations = 20
 iter_output_interval = 1
-time_output_interval = -1.0  # negative value means simulation time ignored for output interval
-std_out_interval = 5    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
-safe_state_mode = false  # when true, writes out a state file at each iteration (very slow); when false, only does so at end of successful run
+time_output_interval = -5.0 # negative value means simulation time ignored for output interval
+std_out_interval = 1    # number of iterations between short updates written to standard out (negative value means no updates written to std out)
+safe_state_mode = true  # when true, writes out state files during the simulation run; when false, only does so at end of successful run
+safe_state_interval = 5  # when safe_state_mode == true, number of iterations between .state files written out during run
 
 # Boundary conditions
 x_bound_1 = periodic
 x_bound_2 = periodic
-y_bound_1 = wall
-y_bound_2 = open
+y_bound_1 = fixed
+y_bound_2 = fixed
 open_boundary_strength = 1.0
-open_boundary_decay_base = 0.8
-x_origin = lower    # lower, center, or upper
-y_origin = lower    # lower, center, or upper
+open_boundary_decay_base = 0.5
+# x_origin = lower    # lower, center, or upper
+# y_origin = lower    # lower, center, or upper
 
 # Safety factors
-epsilon = 0.1
-epsilon_viscous = 1.0
+epsilon = 0.2
+epsilon_viscous = 1.0e-4
 
 # Variable lower bounds
-rho_min = 1.0e-30
+rho_min = 1.0e-16
 temp_min = 1.0e4
 thermal_energy_min = 1.0e-6
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, press, rad, thermal_energy, v_x, v_y, dt_thermal, dt, n
+output_flags = rho, temp, press, thermal_energy, v_x, v_y, dt, n, div_bi, div_be, bi_x, bi_y
 
-#---------- SOLAR CONFIGS ----------#
-
-# Radiative losses
-radiative_losses = true
-radiation_ramp = 1.0e3
-temp_chromosphere = 3.0e4 
-epsilon_rad = 0.1 # safety factor for subcycling time step
-
-# Ambient heating
-ambient_heating = true
-heating_rate = 1.0e-4
-
+#---------- MODULE CONFIGS ----------#
+# Localized heating
+localized_heating = false
+{
+    start_time = 3000
+    duration = 2000
+    max_heating_rate = 1.0e-3
+    stddev_x = 10
+    stddev_y = 10
+    center_x = 49.5
+    center_y = 49.5
+}
+# Savitzky-Golay filtering
+sg_filtering = false
+{
+    filter_interval = 3
+}
 # Thermal conduction (Spitzer conductivity)
-thermal_conduction = true
-flux_saturation = true
-epsilon_thermal = 0.1 # safety factor for subcycling time step
-dt_thermal_min = 1.0e-4
-
+thermal_conduction = false
+{
+    flux_saturation = true
+    epsilon = 0.1 # safety factor for subcycling time step
+    dt_subcycle_min = 1.0e-4
+}
+# Radiative losses
+radiative_losses = false
+{
+    cutoff_ramp = 1.0e3
+    cutoff_temp = 3.0e4
+    epsilon = 0.1
+    output_to_file = true
+}
+# Ambient heating
+ambient_heating = false
+{
+    heating_rate = 1.0e-4
+}
 #------------------------------------#
