--- a/ucnp.settings
+++ b/ucnp.settings
@@ -12,12 +12,12 @@
 n = cgs = 1e8 % peak plasma number density
 n_min = cgs = 1e3 % minimum plasma density - too low of density leads to numerical errors
 n_dist = opt = gaussian % plasma density distribution
-sig_x = cgs = 0.1 % rms radius of plasma along x axis
-sig_y = cgs = 0.1 % rms radius of plasma along y axis
+sig_x = cgs = 1 % rms radius of plasma along x axis
+sig_y = cgs = 1 % rms radius of plasma along y axis
 Ti = cgs = 1e-2 % initial ion temperature
 Te = cgs = 20 % initial electron temperature
-dBdx = cgs = 1e-4 % gradient of quadrupole magnetic field along symmetry (x) axis
-tmax/tau_exp = cgs = 1 % end time for simulation
+dBdx = cgs = 0 % gradient of quadrupole magnetic field along symmetry (x) axis
+tmax/tau_exp = cgs = 2 % end time for simulation
 x_lim = sig_x = 5 % simulation box size on x axis: from -x_lim to x_lim
 y_lim = sig_y = 5 % simulation box size on y axis: from -y_lim to y_lim   
 grid_opt = opt = uniform % uniform or non-uniform
