--- a/ucnp.settings
+++ b/ucnp.settings
@@ -11,17 +11,17 @@
 
 n = cgs = 1e8 % peak plasma number density
 n_min = cgs = 1e3 % minimum plasma density - too low of density leads to numerical errors
-n_dist = opt = exponential % plasma density distribution
+n_dist = opt = gaussian % plasma density distribution
 sig_x = cgs = .1 % rms radius of plasma along x axis
 sig_y = cgs = .1 % rms radius of plasma along y axis
 Ti = cgs = 1e-2 % initial ion temperature
 Te = cgs = 20 % initial electron temperature
 dBdx = cgs = 0 % gradient of quadrupole magnetic field along symmetry (x) axis
-tmax/tau_exp = cgs = 5 % end time for simulation
+tmax/tau_exp = cgs = 7.5 % end time for simulation
 x_lim = sig_x = 10 % simulation box size on x axis: from -x_lim to x_lim
 y_lim = sig_x = 10 % simulation box size on y axis: from -y_lim to y_lim   
 grid_opt = opt = uniform % uniform or non-uniform
 Nx = cgs = 201 % number of cells on x axis
 Ny = cgs = 201 % number of cells on y axis                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   0 % simulation box size on y axis: from -y_lim to y_lim
 m_i = cgs = 1.455e-22 % Sr ion mass
-gam = cgs = 2 % adiabatic index for Sr+ 
+gam = cgs = 2 % adiabatic index for Sr+ - valid for two-dimensional monatomic systems
