--- a/ucnp.config
+++ b/ucnp.config
@@ -6,6 +6,7 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
+equation_set = ideal_mhd
 time_integrator = rk2
 max_iterations = -1
 iter_output_interval = 15
