Update UCNP files

--- a/ucnp.config
+++ b/ucnp.config
@@ -33,4 +33,12 @@ thermal_energy_min = 1.0e-100
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, v_x, v_y
+output_flags = rho, temp, v_x, v_y, dPx, dPy, Fcx, Fcy
+
+# Coulomb Explosion
+coulomb_explosion = true
+{
+    timescale = 1
+    lengthscale = 2
+    strength = 3
+}
