--- a/ucnp.config
+++ b/ucnp.config
@@ -38,7 +38,7 @@ output_flags = rho, temp, v_x, v_y, dPx, dPy, Fcx, Fcy
 # Coulomb Explosion
 coulomb_explosion = true
 {
-    timescale = 1
-    lengthscale = 2
-    strength = 3
+    timescale = 1.62312e-05
+    lengthscale = 1
+    strength = 1
 }
