Update UCNP files

--- a/ucnp.config
+++ b/ucnp.config
@@ -33,10 +33,10 @@ thermal_energy_min = 1.0e-100
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, v_x, v_y, dPx, dPy, Fcx, Fcy
+output_flags = rho, temp, v_x, v_y
 
 # Coulomb Explosion
-coulomb_explosion = true
+coulomb_explosion = false
 {
     timescale = 1.62312e-05
     lengthscale = 1
