duration and time_output_interval now handled by .config only

--- a/ucnp.config
+++ b/ucnp.config
@@ -8,6 +8,7 @@
 # Iteration settings
 equation_set = ideal_mhd
 time_integrator = rk2
+duration = -1
 max_iterations = -1
 iter_output_interval = -1
 time_output_interval = -1  # negative value means simulation time ignored for output interval
