Begin development of equation set with separated energy equations

--- a/ucnp.config
+++ b/ucnp.config
@@ -6,7 +6,7 @@
 # Boundary condition configs must be set as one of {"periodic","wall","open"}
 
 # Iteration settings
-equation_set = ideal_mhd
+equation_set = ideal_mhd_2E
 time_integrator = rk2
 duration = -1
 max_iterations = -1
@@ -34,7 +34,7 @@ thermal_energy_min = 1.0e-100
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp, v_x, v_y
+output_flags = rho, temp_i,temp_e, v_x, v_y
 
 # Coulomb Explosion
 coulomb_explosion = false
@@ -42,4 +42,5 @@ coulomb_explosion = false
     timescale = 1.62312e-05
     lengthscale = 1
     strength = 1
+    output_to_file = true
 }
