Implement electron-ion thermalization module

--- a/ucnp.config
+++ b/ucnp.config
@@ -44,3 +44,9 @@ coulomb_explosion = false
     strength = 1
     output_to_file = true
 }
+
+# Electron-Ion Thermalization
+eic_thermalization = true
+{
+    eic_output_to_file = true
+}
