Remove -larmadillo flag from Makefile

--- a/ucnp.config
+++ b/ucnp.config
@@ -48,5 +48,5 @@ coulomb_explosion = false
 # Electron-Ion Thermalization
 eic_thermalization = true
 {
-    eic_output_to_file = true
+    eic_output_to_file = false
 }
