Update UCNP analysis

--- a/ucnp.config
+++ b/ucnp.config
@@ -34,7 +34,7 @@ thermal_energy_min = 1.0e-100
 
 # All of the (comma-separated) variables given here will be written out in mhd.out files
 # See fileio.cpp for a full list of variable names.
-output_flags = rho, temp_i,temp_e, v_x, v_y
+output_flags = rho, temp_e, temp_i, v_x, v_y
 
 # Coulomb Explosion
 coulomb_explosion = false
@@ -46,7 +46,7 @@ coulomb_explosion = false
 }
 
 # Electron-Ion Thermalization
-eic_thermalization = true
+eic_thermalization = false
 {
     eic_output_to_file = false
 }
